Move message getters to Storage
Started cleaning up MessageHandler as well.